# remaking_skyflock

./: .gitignore  start_swarm.sh  test_mavsdk.py  test_mavsdk_health.py  test_state.py  test_takeoff.py
docs/: developer_documentation.md  handbook.md  implementation_history.md  link_between_nodes.md  multi_drone_mavsdk_fix.md
src/my_digirc/: CMakeLists.txt  Command.srv.save  package.xml
src/my_digirc/src/: swarm_controller.py  swarm_keyboard_controller.py  swarm_manager.py  swarm_orchestrator.py  swarm_telemetry_logger.py
src/my_digirc/src/hal/: __init__.py  abstract_hal.py  pixhawk_hal.py  sitl_hal.py
src/my_digirc/src/manager/: __init__.py  commands.py  connection.py  manager.py  setpoint.py  telemetry.py
src/my_digirc/srv/: Command.srv
src/my_digirc/tests/: test_command_validation.py  test_formation_math.py
